# anyrender

.github/workflows/: ci.yml
crates/anyrender/: Cargo.toml
crates/anyrender/src/: lib.rs  null_backend.rs  recording.rs  types.rs
crates/anyrender_serialize/: Cargo.toml
crates/anyrender_serialize/src/: font_writer.rs  lib.rs
crates/anyrender_serialize/tests/: serialize.rs
crates/anyrender_skia/: Cargo.toml
crates/anyrender_skia/src/: image_renderer.rs  lib.rs  scene.rs  window_renderer.rs
crates/anyrender_svg/src/: lib.rs  render.rs  util.rs
crates/anyrender_vello/src/: image_renderer.rs  lib.rs  scene.rs  window_renderer.rs
crates/anyrender_vello_cpu/: Cargo.toml
crates/anyrender_vello_cpu/src/: image_renderer.rs  lib.rs  scene.rs
crates/anyrender_vello_hybrid/src/: lib.rs  scene.rs  webgl_scene.rs  window_renderer.rs
crates/pixels_window_renderer/src/: lib.rs
crates/softbuffer_window_renderer/src/: lib.rs
examples/bunnymark/: Cargo.toml
examples/bunnymark/src/: bunny.rs  main.rs
examples/serialize/: Cargo.toml
examples/serialize/src/: main.rs
examples/winit/src/: main.rs
