[package]
name = "bunnymark"
version = "0.1.0"
edition = "2024"
license.workspace = true
publish = false

[dependencies]
kurbo = { workspace = true }
winit = { workspace = true }
peniko = { workspace = true }
image = { workspace = true, features = ["png"] }
anyrender = { workspace = true }
anyrender_vello = { workspace = true, features = ["log_frame_times"] }
anyrender_vello_hybrid = { workspace = true, features = ["log_frame_times"] }
anyrender_vello_cpu = { workspace = true, features = ["pixels_window_renderer", "multithreading", "log_frame_times"] }
anyrender_skia = { workspace = true, features = ["log_frame_times"] }
pixels_window_renderer = { workspace = true }
fastrand = "2.3"
